{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 29,
  "lineage": "7c1f58c8-fd48-d046-351c-d924055f0ebe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9df08bf9e049cec",
            "domain": "vpc",
            "id": "eipalloc-0d9df08bf9e049cec",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-153-9.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.153.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3c88628b7931678",
            "domain": "vpc",
            "id": "eipalloc-0a3c88628b7931678",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-39-119-99.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.119.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:internet-gateway/igw-069b9b92500d128c1",
            "id": "igw-069b9b92500d128c1",
            "owner_id": "414054023605",
            "tags": {
              "Name": "IGW-TEST-2022-06-07"
            },
            "tags_all": {
              "Name": "IGW-TEST-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9df08bf9e049cec",
            "connectivity_type": "public",
            "id": "nat-08f9a325b6cb2cb93",
            "network_interface_id": "eni-0f53a278ed45d884b",
            "private_ip": "94.0.0.243",
            "public_ip": "3.37.153.9",
            "subnet_id": "subnet-043a12f11d710cc1e",
            "tags": {
              "Name": "for-TEST-NAT-2a"
            },
            "tags_all": {
              "Name": "for-TEST-NAT-2a"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_2a",
            "aws_subnet.public-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3c88628b7931678",
            "connectivity_type": "public",
            "id": "nat-0e17019f3babdf6e2",
            "network_interface_id": "eni-0d0d16e78a7b74bfd",
            "private_ip": "94.0.1.160",
            "public_ip": "3.39.119.99",
            "subnet_id": "subnet-09d051aece1b0de31",
            "tags": {
              "Name": "for-TEST-NAT-2c"
            },
            "tags_all": {
              "Name": "for-TEST-NAT-2c"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_2c",
            "aws_subnet.public-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_nat_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-072e9ba3165894d091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08f9a325b6cb2cb93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072e9ba3165894d09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_2a",
            "aws_nat_gateway.nat_2a",
            "aws_route_table.route_table_for_private-2a",
            "aws_subnet.public-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_nat_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c9e15256d2cfc1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e17019f3babdf6e2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c9e15256d2cfc1e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat_2c",
            "aws_nat_gateway.nat_2c",
            "aws_route_table.route_table_for_private-2c",
            "aws_subnet.public-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-069b9b92500d128c1",
            "id": "r-rtb-0d4f1546acaac7c331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d4f1546acaac7c33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.route_table_for_public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_for_private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:route-table/rtb-072e9ba3165894d09",
            "id": "rtb-072e9ba3165894d09",
            "owner_id": "414054023605",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ROUTE-TABLE-TEST-PRI-2a-2022-06-07"
            },
            "tags_all": {
              "Name": "ROUTE-TABLE-TEST-PRI-2a-2022-06-07"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_for_private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:route-table/rtb-04c9e15256d2cfc1e",
            "id": "rtb-04c9e15256d2cfc1e",
            "owner_id": "414054023605",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ROUTE-TABLE-TEST-PRI-2c-2022-06-07"
            },
            "tags_all": {
              "Name": "ROUTE-TABLE-TEST-PRI-2c-2022-06-07"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_for_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:route-table/rtb-0d4f1546acaac7c33",
            "id": "rtb-0d4f1546acaac7c33",
            "owner_id": "414054023605",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ROUTE-TABLE-TEST-PUB-2022-06-07"
            },
            "tags_all": {
              "Name": "ROUTE-TABLE-TEST-PUB-2022-06-07"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0927c46b1cefcb76f",
            "route_table_id": "rtb-0d4f1546acaac7c33",
            "subnet_id": "subnet-043a12f11d710cc1e"
          },
          "dependencies": [
            "aws_route_table.route_table_for_public",
            "aws_subnet.public-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07312247119c0ce58",
            "route_table_id": "rtb-0d4f1546acaac7c33",
            "subnet_id": "subnet-09d051aece1b0de31"
          },
          "dependencies": [
            "aws_route_table.route_table_for_public",
            "aws_subnet.public-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_db-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1d2c2f964e23285",
            "route_table_id": "rtb-072e9ba3165894d09",
            "subnet_id": "subnet-07e521c28362255ae"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2a",
            "aws_subnet.private-2a-db",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_db-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ca265f41a32230",
            "route_table_id": "rtb-04c9e15256d2cfc1e",
            "subnet_id": "subnet-03294efda33628b1d"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2c",
            "aws_subnet.private-2c-db",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_was-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7985435ad503765",
            "route_table_id": "rtb-072e9ba3165894d09",
            "subnet_id": "subnet-055ec706f95b84a96"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2a",
            "aws_subnet.private-2a-was",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_was-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d8b38bd1d62b1a0",
            "route_table_id": "rtb-04c9e15256d2cfc1e",
            "subnet_id": "subnet-04175365accae6704"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2c",
            "aws_subnet.private-2c-was",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_web-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6620fe5ca869a67",
            "route_table_id": "rtb-072e9ba3165894d09",
            "subnet_id": "subnet-044c186da21f37b44"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2a",
            "aws_subnet.private-2a-web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_web-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac1fcec8ad12e9d2",
            "route_table_id": "rtb-04c9e15256d2cfc1e",
            "subnet_id": "subnet-023c783481ab89a9a"
          },
          "dependencies": [
            "aws_route_table.route_table_for_private-2c",
            "aws_subnet.private-2c-web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-07e521c28362255ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "94.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e521c28362255ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-DB-2a-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-DB-2a-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-055ec706f95b84a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "94.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055ec706f95b84a96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-WAS-2a-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-WAS-2a-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-044c186da21f37b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "94.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044c186da21f37b44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-WEB-2a-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-WEB-2a-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-03294efda33628b1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "94.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03294efda33628b1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-DB-2c-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-DB-2c-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c-was",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-04175365accae6704",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "94.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04175365accae6704",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-WAS-2c-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-WAS-2c-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-023c783481ab89a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "94.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023c783481ab89a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PRI-WEB-2c-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PRI-WEB-2c-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-043a12f11d710cc1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "94.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043a12f11d710cc1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PUB-2a-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PUB-2a-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:subnet/subnet-09d051aece1b0de31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "94.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d051aece1b0de31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "414054023605",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SUBNET-PUB-2c-2022-06-07"
            },
            "tags_all": {
              "Name": "SUBNET-PUB-2c-2022-06-07"
            },
            "vpc_id": "vpc-0e8a60a12229f27f2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:414054023605:vpc/vpc-0e8a60a12229f27f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "94.0.0.0/16",
            "default_network_acl_id": "acl-03ceded6ca56e06f4",
            "default_route_table_id": "rtb-05ece8376e09eeacd",
            "default_security_group_id": "sg-05bf63a7f541e7e9c",
            "dhcp_options_id": "dopt-a10984ca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e8a60a12229f27f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ece8376e09eeacd",
            "owner_id": "414054023605",
            "tags": {
              "Name": "VPC-TEST-2022-06-07"
            },
            "tags_all": {
              "Name": "VPC-TEST-2022-06-07"
            }
          }
        }
      ]
    }
  ]
}